<?xml version="1.0" encoding="utf-8"?>
	<resources>
		<string name="app_name">Subject\'s schedule for students</string>
		<string name="hockeyapp_crash_dialog_title">Error report</string>
		<string name="hockeyapp_crash_dialog_message">Send error report to developers</string>
		<string name="hockeyapp_crash_dialog_negative_button">Cancel</string>
		<string name="hockeyapp_crash_dialog_positive_button">Send</string>
		<string name="hockeyapp_crash_dialog_always_send_button">Send always</string>
		<string name="hockeyapp_download_failed_dialog_title">Update error</string>
		<string name="hockeyapp_download_failed_dialog_message">Can\'t update application</string>
		<string name="hockeyapp_download_failed_dialog_negative_button">Cancel</string>
		<string name="hockeyapp_download_failed_dialog_positive_button">OK</string>
		<string name="hockeyapp_update_mandatory_toast">hockeyapp_update_mandatory_toast</string>
		<string name="hockeyapp_update_dialog_title">Update</string>
		<string name="hockeyapp_update_dialog_message">New version available</string>
		<string name="hockeyapp_update_dialog_negative_button">No</string>
		<string name="hockeyapp_update_dialog_positive_button">Yes</string>
		<string name="fragment_settings_title">Settings</string>
		<string name="fragment_schedule_title">Schedule</string>
		<string name="fragment_teachers_title">Professors</string>
		<string name="fragment_tasks_title">Tasks</string>
		<string name="fragment_profile_title">Account</string>
		<string name="fragment_support_title">Support</string>
		<string name="activity_week_schedule_title">Week schedule</string>
		<string name="activity_lesson_details_title">Edit lesson</string>
		<string name="lesson_time">at %s</string>
		<string name="no_lessons">No lessons today!</string>
		<string name="weekend_day">Weekend</string>
		<string name="today">Today</string>
		<string name="tomorrow">Tomorrow</string>
		<string name="weekend_hint">Relax today</string>
		<string name="subgroups">Sub-groups: %s</string>
		<string name="subgroups_title">Sub-groups</string>
		<string name="edit">Edit</string>
		<string name="complete">Done</string>
		<string name="open_task_fragment_title">TODO</string>
		<string name="completed_task_fragment_title">Completed</string>
		<string name="day1">Day</string>
		<string name="day2">days</string>
		<string name="day3">days</string>
		<string name="no_days">days</string>
		<string name="open">undo</string>
		<string name="activity_edit_task_title">Edit task</string>
		<string name="activity_add_task_title">New task</string>
		<string name="subject">Subject</string>
		<string name="select_image_source_title">Choose...</string>
		<string name="select_image_source_camera">Camera</string>
		<string name="select_image_source_gallery">Gallery</string>
		<string name="select_photo_hint">Choose photo</string>
		<string name="subject_search_hint">Enter subject title</string>
		<string name="task_reopened">Task is incomplete</string>
		<string name="task_completed">Task completed</string>
		<string name="subject_hint">Enter subject</string>
		<string name="date_end_hint">Due to</string>
		<string name="description">Description</string>
		<string name="photo_count">%s photos</string>
		<string name="photo_viewer_title" formatted="false">Photo %d/%d</string>
		<string name="positive_button_text">yes</string>
		<string name="negative_button_text">no</string>
		<string name="photo_deletion_title">Delete photo</string>
		<string name="photo_deletion_message">Are you sure?</string>
		<string name="photo_deleted">Photo deleted</string>
		<string name="edit_task_activity_confirm_close_msg">You have missed required fields. Changes won\'t be saved. Continue?</string>
		<string name="set_edit_task_date_end_warning">Oops! You should set up upcoming date</string>
		<string name="image_added_success">Photo was added</string>
		<string name="image_added_error">Oops! Something went wrong</string>
		<string name="university_search_hint">Enter university name</string>
		<string name="faculty_search_hint">Enter faculty title</string>
		<string name="group_search_hint">Enter group title</string>
		<string name="search_complete">Let\'s go</string>
		<string name="search_university_hint">Choose university</string>
		<string name="search_faculty_hint">Choose faculty</string>
		<string name="search_group_hint">Choose group</string>
		<string name="all_fields_filled_hint">Nice!\nCheck out fields and let\'s go</string>
		<string name="new_group_title">group title</string>
		<string name="activity_add_new_university_title">Add university</string>
		<string name="activity_add_new_faculty_title">Add faculty</string>
		<string name="activity_add_new_group_title">Add group</string>
		<string name="empty_field_warning">Required field</string>
		<string name="invalid_format_warning">Incorrect format</string>
		<string name="new_data_sent">Thank you,\nRequest is successfully received</string>
		<string name="continue_text">Continue</string>
		<string name="loading_msg">Loading...</string>
		<string name="enter_email">Enter your e-mail</string>
		<string name="email_title">e-mail</string>
		<string name="user_type_student">Student</string>
		<string name="user_type_employee">Official</string>
		<string name="university_name">University title</string>
		<string name="send">Send</string>
		<string name="tagline">Schedule\nat your fingertips</string>
		<string name="university">University</string>
		<string name="faculty">Faculty</string>
		<string name="group">Group</string>
		<string name="start">Let\'s go!</string>
		<string name="enter">Sign in</string>
		<string name="teacher_title">Professor</string>
		<string name="task_title">Tasks</string>
		<string name="network_unavailable">No Internet connection!</string>
		<string name="schedule_updated_success">Schedule is updated</string>
		<string name="schedule_updated_error">Schedule updating failed</string>
		<string name="new_schedule_request">Your request sent</string>
		<string name="result_not_found">There is no</string>
		<string name="user_name">your name</string>
		<string name="schedule_is_unavailable">Schedule loading failed </string>
		<string name="group_not_found">Oops! We are not able to find out your group. Choose it again, please</string>
		<string name="add_university">Choose university</string>
		<string name="add_faculty">Choose faculty</string>
		<string name="add_group">Choose group</string>
		<string name="save">SAVE</string>
		<string name="add">Add</string>
		<string name="remove">Delete</string>
		<string name="name_hint">Name</string>
		<string name="loading_msg2">Loading...</string>
		<string name="loading_msg3">Please wait...</string>
		<string name="sending_msg">Saving...</string>
		<string name="restore_password_request">Your request was sent successfully</string>
		<string name="sign_in_fragment_title">Sign in</string>
		<string name="sign_up_fragment_title">Sign up</string>
		<string name="email_hint">Email</string>
		<string name="password_hint">Password</string>
		<string name="sign_in">Sign in</string>
		<string name="sign_up">sign up</string>
		<string name="restore_password_btn_text">Forgot password</string>
		<string name="terms_of_use">By clicking the button above, you agree to the</string>
		<string name="terms_of_use2">Terms of use</string>
		<string name="activity_restore_password_title">Restore password</string>
		<string name="success">success</string>
		<string name="incorrect_credentials">incorrect email or password</string>
		<string name="email_not_found">User not found</string>
		<string name="logout">Log out</string>
		<string name="user_profile_logout_confirm_msg">Do you really want to log out?</string>
		<string name="offer_text">Hot offers</string>
		<string name="profile">Profile</string>
		<string name="university_not_selected">Specify your university first</string>
		<string name="faculty_not_selected">Specify your faculty first</string>
		<string name="user_already_exist">A user with this e-mail address already exists</string>
		<string name="service_unavailable">Service temporarily unavailable</string>
</resources>