<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlData"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:hint="@string/name_hint"
                android:inputType="textCapSentences"
                android:maxLines="2"
                android:textSize="22sp"
                app:met_accentTypeface="fonts/Roboto-Bold.ttf"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/textLabelColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtName"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="2"
                android:textSize="22sp"
                app:met_accentTypeface="fonts/Roboto-Bold.ttf"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/email_title"
                app:met_primaryColor="@color/textLabelColor" />

            <LinearLayout
                android:id="@+id/llUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtEmail"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/studentType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:text="@string/user_type_student"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

                <RadioButton
                    android:id="@+id/employeeType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:text="@string/user_type_employee"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtUniversityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llUserType"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:hint="@string/university_name"
                android:inputType="textCapSentences"
                android:maxLines="2"
                android:textSize="22sp"
                app:met_accentTypeface="fonts/Roboto-Bold.ttf"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/textLabelColor" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/complete_search_item_selector"
                android:gravity="center"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlDataSent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryColor"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/new_data_sent"
                android:textColor="@android:color/white"
                android:textSize="28sp" />

            <View
                android:id="@+id/centerView"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_centerInParent="true" />

            <ImageView
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:layout_alignBottom="@+id/centerView"
                android:layout_centerHorizontal="true"
                android:src="@drawable/cute_cat" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/send_new_data_selector"
                android:gravity="center"
                android:text="@string/continue_text"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>


