<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical">

    <TextView
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/red"
        android:id="@+id/tvError"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_email_white_24dp"
            android:tint="@color/blue" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="16sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_vpn_key_white_24dp"
            android:tint="@color/blue" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/blue"
            android:textSize="16sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="none" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/sign_in_btn_selector"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="100dp"
        android:gravity="left"
        android:text="@string/terms_of_use"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/btnTermsOfUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="72dp"
        android:gravity="left"
        android:text="@string/terms_of_use2"
        android:textColor="@color/blue"
        android:textSize="12sp" />

</LinearLayout>