<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_bg" />

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/tagline"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/hintText"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:text="@string/search_university_hint"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="invisible" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/flUniversity"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="28dp"
            android:visibility="invisible">

            <RelativeLayout
                android:id="@+id/searchUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/search_rounded_bg_selector">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_grey600_24dp"
                    android:tint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/university"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvSelectedUniversity"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/selected_search_item_selector"
                android:clickable="true"
                android:ellipsize="end"
                android:gravity="center_vertical|left"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/flFaculty"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="13dp"
            android:visibility="invisible">

            <RelativeLayout
                android:id="@+id/searchFaculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/search_rounded_bg_selector"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_grey600_24dp"
                    android:tint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/faculty"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvSelectedFaculty"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/selected_search_item_selector"
                android:clickable="true"
                android:ellipsize="end"
                android:gravity="center_vertical|left"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/flGroup"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="13dp"
            android:visibility="invisible">

            <RelativeLayout
                android:id="@+id/searchGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/search_rounded_bg_selector"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_grey600_24dp"
                    android:tint="@android:color/white" />

                <TextView
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/group"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvSelectedGroup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/selected_search_item_selector"
                android:clickable="true"
                android:ellipsize="end"
                android:gravity="center_vertical|left"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btnAuth"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/complete_search_item_selector"
        android:gravity="center"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>
